  'reverse.y': if TRUE, Y-axis of the filled contour plot is reversed
- A subtle change to the default value of wavelet.levels: To get
  the sequence 0, 0.1, 0.2, ..., 1 it is best to use (0:10)/10
  instead of seq(from=0, to=1, by=0.1).  Parentheses in the former are
  used for clarity of meaning.
- Added some input checks
- Small optimizations

Files: xskel.ccf.plot.R and xskel.plot.R
----------------------------------------

- Code optimizations
- Small changes to output

* CHANGES IN dplR VERSION 1.6.0

File: TODO
-------------------------
- Added a TODO list that follows the todo.ell format.

File: NAMESPACE
-------------------------
- Added chron.plot to export list.
- Added interseries.cor to export list.
- Added plot.rwl as an S3Method.
- Added plot.crn as an S3Method.
- Added summary.rwl as an S3Method.
- Added insert and delete.ring functions.

File: xskel.ccf.plot.R and xskel.plot.R and 
---------------

- New plotting functions to help crossdate with skeleton plot
  and cross correlation plots.

File: ccf.series.rwl.R
---------------

- Switched the order of x and y in the call to ccf(). This makes a great deal
  more logical sense now as a missing ring shows up with a positive lag rather
  than a negative lag.
- Changed color scheme a bit to look less harsh

Files: ccf.series.rwl.R, corr.series.seg.R, series.rwl.plot.R
-------------------------------------------------------------

- New convenience feature: if the length of 'series' is 1, it is
  interpreted as a column index to 'rwl', and the corresponding
  series is left out of the master chronology.

File: ffcsaps.R
---------------

- Small optimization: using "usually slightly faster"
  'tcrossprod(x)' instead of 'x %*% t(x)'

File: insert.ring.R
-------------------------
- insert.ring and delete.ring functions for editing rw vectors. Very simple.

File: crn.plot.R
-------------------------
- Added several new plotting options to give users more control of plot